--- a/app/views/lists/add_kingaku.html.erb
+++ b/app/views/lists/add_kingaku.html.erb
@@ -1,2 +1,7 @@
-<h1>Lists#add_kingaku</h1>
-<p>Find me in app/views/lists/add_kingaku.html.erb</p>
+<%= form_tag :controller => "lists",:action => "confirm_kingaku", :url_hash => @list.url_hash do %>
+  金額:<%= text_field_tag "kingaku" %><br />
+  メモ:<%= text_field_tag "memo" %><br />
+  メンバ:<%= select_tag "member_id", options_from_collection_for_select(@members, :id, :name)%><br />
+  <%= submit_tag "登録" %>
+  <%= hidden_field_tag "before_confirm" , "true" %>
+<% end %>
