--- a/app/views/lists/edit_member.html.erb
+++ b/app/views/lists/edit_member.html.erb
@@ -1,2 +1,22 @@
-<h1>Lists#edit_member</h1>
-<p>Find me in app/views/lists/edit_member.html.erb</p>
+<%= @flush %>
+
+<table width="" cellspacing="" cellpadding="" border="">
+<tr>
+  <th>メンバ</th><th>削除</th>
+</tr>
+  <% @members.each do |m| %>
+<tr>
+  <td><%=m.name%></td><td><%= link_to "X", :action => "edit_member", :url_hash => @url_hash, :act => "delete", :member_id => m.id%></td>
+</td>
+  <% end %>
+</table>
+<br /><br />
+
+メンバ追加 <br />
+<%= form_tag :action => "edit_member", :url_hash => @url_hash, :act => "add" do %>
+<%= text_field_tag "name" %><br />
+<%= submit_tag "Add" %>
+<% end %>
+<br /><br />
+
+<%= link_to "OK", :action => "list", :url_hash => @url_hash %>
