--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,1 +1,9 @@
-<%= link_to "New", :controller => "lists", :action => "init" %>
+<br />
+<div class="row">
+  <div class="large-11 large-center columns">
+    <%= link_to "New", {:controller => "lists", :action => "init"}, :class => "success button large expanded" %>
+  </div>
+</div>
+
+
+
