--- a/app/views/lists/add_kingaku.html.erb
+++ b/app/views/lists/add_kingaku.html.erb
@@ -1,7 +1,27 @@
-<%= form_tag :controller => "lists",:action => "confirm_kingaku", :url_hash => @list.url_hash do %>
-  金額:<%= text_field_tag "kingaku" %><br />
-  メモ:<%= text_field_tag "memo" %><br />
-  メンバ:<%= select_tag "member_id", options_from_collection_for_select(@members, :id, :name)%><br />
-  <%= submit_tag "登録" %>
-  <%= hidden_field_tag "before_confirm" , "true" %>
-<% end %>
+<br />
+<div class="row">
+  <div class="large-11 columns">
+    <div class="callout">
+      <%= form_tag :controller => "lists",:action => "confirm_kingaku", :url_hash => @list.url_hash do %>
+      <div class="input-group">
+	<span class="input-group-label">金額</span>
+	<%= text_field_tag "kingaku", "", :class => "input-group-field", :type => "number" %>
+      </div>
+      <div class="input-group">
+	<span class="input-group-label">メモ</span>
+	<%= text_field_tag "memo", "", :class => "input-group-field" %>
+      </div>
+      <div class="input-group">
+	<span class="input-group-label">メンバ</span>
+	<%= select_tag "member_id", options_from_collection_for_select(@members, :id, :name), :class => "input-group-field" %>
+      </div>
+      <div class="float-right">
+	<%= submit_tag "登録", :class => "success button" %>
+	<%= hidden_field_tag "before_confirm" , "true"%>
+	<% end %>
+      </div>
+      <br /><br />
+    </div>
+  </div>
+</div>
+<br />
