--- a/app/views/lists/list.html.erb
+++ b/app/views/lists/list.html.erb
@@ -1,29 +1,73 @@
+<br />
+<div class="row">
+  <div class="large-11 large-centered column">
+    <h1><%=@list.name%></h1>
+  </div>
+</div>
 
-<table>
-  <tr><th>金額</th><th>メモ</th><th>メンバ</th><th>削除</th></tr>
-  <%- @kingakus.each do |k| -%>
-  <tr>
-    <td><%=k.kingaku%></td><td><%=k.memo%></td><td><%=k.member.name%></td>
-    <td><%= link_to "X", :action => "delete_kingaku", :url_hash => @list.url_hash, :kingaku_id => k.id %></td>
-  </tr>
-  <%- end -%>
-</table>
+<div class="row">
+  <div class="large-11 large-centered columns">
+    <div class="callout">
+      <table class="hover">
+	<thread>
+	  <tr>
+	    <th>金額</th>
+	    <th>メモ</th>
+	    <th>メンバ</th>
+	    <th>削除</th>
+	  </tr>
+	</thread>
+	<tbody>
+	  <%- @kingakus.each do |k| -%>
+	  <tr>
+	    <td align="center"><%=k.kingaku%></td>
+	    <td align="center"><%=k.memo%></td>
+	    <td align="center"><%=k.member.name%></td>
+	    <td align="center"><%= link_to "削除", {:action => "delete_kingaku", :url_hash => @list.url_hash, :kingaku_id => k.id}, :class => "button alert"  %></td>
+	  </tr>
+	  <%- end -%>
+	</tbody>
+      </table>
+      <%= link_to "割り勘追加", {:controller => "lists", :action => "add_kingaku", :url_hash => @list.url_hash}, :class => "button success float-right" %><br /><br />
+    </div>
+  </div>
+</div>
 
-<%= link_to "割り勘追加", :controller => "lists", :action => "add_kingaku", :url_hash => @list.url_hash %><br />
-<br /><br />
 
-<table>
-  <tr><th>メンバ</th><th>支払額</th></tr>
-  <%- @shiharaigaku.each do |l|-%>
-  <tr>
-    <td><%=l[1]%></td><td><%=l[2]%></td>
-  </tr>
-  <%- end -%>
-</table>
-<%= link_to "メンバ編集", :controller => "lists", :action => "edit_member", :url_hash => @list.url_hash %><br />
-<br /><br />
+<div class="row">
+  <div class="large-11 large-centered columns">
+    <div class="callout">
+      <table class="hover">
+	<thread>
+	  <tr>
+	    <th>メンバ</th>
+	    <th>支払額</th>
+	  </tr>
+	</thread>
+	<tbody>
+	  <%- @shiharaigaku.each do |l|-%>
+	  <tr>
+	    <td align="center"><%=l[1]%></td>
+	    <td align="center"><%=l[2]%></td>
+	  </tr>
+	  <%- end -%>
+	</tbody>
+      </table>
+      
+      <%= link_to "メンバ編集", {:controller => "lists", :action => "edit_member", :url_hash => @list.url_hash}, :class => "button success float-right" %><br /><br />
+      </div>
+  </div>
+</div>
 
+<div class="row"> 
+  <div class="large-11 large-centered columns">
+    <div class="callout">
+      URL
+    
+    <%= text_field_tag "", (url_for :only_path => false, :controller => "lists", :action => "list", :url_hash => @list.url_hash ) , :onclick => "this.setSelectionRange(0,9999);", :readonly => true%>
+    </div>
+  </div>
+</div>
 
-URL:<br /><br />
-<%= url_for :only_path => false, :controller => "lists", :action => "list", :url_hash => @list.url_hash %>
+<br />
 
