--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="/css/app.css" />
   </head>
   <body>
+  <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "callout #{key}") %>
+  <% end %>
     
     <%= yield %>
     
