--- a/app/views/lists/list.html.erb
+++ b/app/views/lists/list.html.erb
@@ -8,6 +8,7 @@
 <div class="row">
   <div class="large-11 large-centered columns">
     <div class="callout">
+      <h4><b>立て替え</b></h4>
       <table class="hover">
 	<thread>
 	  <tr>
@@ -37,18 +38,53 @@
 <div class="row">
   <div class="large-11 large-centered columns">
     <div class="callout">
+      <h4><b>個別支払い</b></h4>
+      <table class="hover">
+	<thread>
+	  <tr>
+	    <th >支払いメンバ</th>
+	    <th >受取りメンバ</th>
+	    <th>精算額</th>
+	    <th>メモ</th>
+	  </tr>
+	</thread>
+	<tbody>
+	  <% @list.paids.each do |pay| %>
+	  <tr>
+	    <td align="center"><%= pay.pay_member.name%></td>
+	    <td align="center"><%= pay.recieve_member.name%></td>
+	    <td align="center"><%= pay.kingaku %></td>
+	    <td align="center"><%= pay.memo %></td>
+	  </tr>
+	  <% end %>
+	</tbody>
+      </table>
+      <%= link_to "支払追加", {:controller => "lists", :action => "paid", :url_hash => @list.url_hash}, :class => "button success float-right" %><br /><br />
+    </div>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="large-11 large-centered columns">
+    <div class="callout">
+      <h4><b>最終精算金額</b></h4>
       <table class="hover">
 	<thread>
 	  <tr>
 	    <th>メンバ</th>
-	    <th>支払額</th>
+	    <th>精算金額</th>
 	  </tr>
 	</thread>
 	<tbody>
 	  <%- @shiharaigaku.each do |l|-%>
 	  <tr>
 	    <td align="center"><%=l[1]%></td>
-	    <td align="center"><%=l[2]%></td>
+	    <% if l[2] < 0 %>
+	       <td align="center"><%= l[2].abs %> 円受取り</td>
+	    <% else %>
+	       <td align="center"><%= l[2].abs %> 円支払い</td>
+	    <% end %>
 	  </tr>
 	  <%- end -%>
 	</tbody>
